実績リスト表示

--- a/steam/templates/steam/index.html
+++ b/steam/templates/steam/index.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-
+<table>
+    <tbody>
+    {% for achieve in object_list %}
+    <tr>
+        <td>{% ifchanged achieve.app.name %}{{ achieve.app.name }}{% endifchanged %}</td>
+        <td><img src="{{ achieve.icon }}"></td>
+        <td>{{ achieve.name }}</td>
+        <td>{{ achieve.description }}{% if achieve.hidden %}(隠し実績){% endif %}</td>
+        <td>{{ achieve.unlock_time }}</td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
 </body>
 </html>
