--- a/steam/templates/steam/index.html
+++ b/steam/templates/steam/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<table>
+{% extends 'steam/base.html' %}
+
+{% block title %}実績リスト{% endblock %}
+
+{% block content %}
+<table class="table table-dark">
     <tbody>
     {% for achieve in object_list %}
     <tr>
@@ -18,5 +16,4 @@
     {% endfor %}
     </tbody>
 </table>
-</body>
-</html>
+{% endblock %}
