--- a/steam/templates/steam/owned_games.html
+++ b/steam/templates/steam/owned_games.html
@@ -4,12 +4,15 @@
 
 {% block content %}
 <h5>{{ game_count }}</h5>
-<ol>
+<table class="table table-dark">
+    <tbody>
     {% for game in games %}
-    <li>
-        <img src="{% if game.header_image %}{{game.header_image}}{% else %}{% url 'alt_image' game.name|urlencode:'' %}{% endif %}" height="43" width="92" alt="{{ game.name }}">
-        <a href="https://store.steampowered.com/app/{{ game.appid }}/" target="_blank">{{ game.name }}</a>
-    </li>
+    <tr>
+        <td><img src="{% if game.header_image %}{{game.header_image}}{% else %}{% url 'alt_image' game.name|urlencode:'' %}{% endif %}" height="43" width="92" alt="{{ game.name }}"></td>
+        <td><a href="https://store.steampowered.com/app/{{ game.appid }}/" target="_blank">{{ game.name }}</a></td>
+        <td>{% if game.price_overview %}{{ game.price_overview.currency }} {{ game.price_overview.initial }}{% endif %}</td>
+    </tr>
     {% endfor %}
-</ol>
+    </tbody>
+</table>
 {% endblock %}
