価格ソート追加

--- a/steam/templates/steam/owned_games.html
+++ b/steam/templates/steam/owned_games.html
@@ -9,10 +9,10 @@
     <tr>
         <th>No.</th>
         <th>バナー</th>
-        <th>ゲーム名</th>
+        <th><a href="{% url 'owned_games' %}">ゲーム名</a></th>
         <th>開発元</th>
         <th>パブリッシャー</th>
-        <th>価格</th>
+        <th><a href="{% url 'owned_games' %}?s=-p">価格</a></th>
     </tr>
     </thead>
     <tbody>
